Load service settings when the configuration dialog opens.

--- a/module/dialogs/configuration.html
+++ b/module/dialogs/configuration.html
@@ -3,6 +3,9 @@
     Configuration — Named-Entity Recognition Extension
   </div>
   <div class="dialog-body">
+    <h2>Services</h2>
+    <div bind="services">
+    </div>
   </div>
   <div class="dialog-footer">
     <button class="button" bind="cancel">Cancel</button>
