The configuration dialog updates settings on the server.

--- a/module/dialogs/configuration.html
+++ b/module/dialogs/configuration.html
@@ -8,6 +8,7 @@
     </div>
   </div>
   <div class="dialog-footer">
-    <button class="button" bind="cancel">Cancel</button>
+    <button bind="cancel" class="button">Cancel</button>
+    <button bind="update" class="button default">Update</button>
   </div>
 </div>
