Move common dialog styling to separate LESS file.

--- a/module/dialogs/about.html
+++ b/module/dialogs/about.html
@@ -1,4 +1,4 @@
-<div class="dialog-frame ner-about">
+<div class="dialog-frame ner ner-about">
   <div class="dialog-header">
     About — Named-Entity Recognition Extension
   </div>
