--- a/module/dialogs/configuration.html
+++ b/module/dialogs/configuration.html
@@ -1,4 +1,4 @@
-<div class="dialog-frame ner-configuration">
+<div class="dialog-frame ner ner-configuration">
   <div class="dialog-header">
     Configuration — Named-Entity Recognition Extension
   </div>
