--- a/module/dialogs/extraction.html
+++ b/module/dialogs/extraction.html
@@ -1,4 +1,4 @@
-<div class="dialog-frame ner-extraction">
+<div class="dialog-frame ner ner-extraction">
   <div class="dialog-header">
     Extract named entities in <span class="column-name">column</span>
   </div>
