Add service checkboxes to extraction dialog.

--- a/module/dialogs/extraction.html
+++ b/module/dialogs/extraction.html
@@ -3,6 +3,14 @@
     Extract named entities in <span class="column-name">column</span>
   </div>
   <div class="dialog-body">
+    <fieldset>
+        <legend>Named-entity extraction services</legend>
+        <p>
+            Use the following services to recognize and extract named entities
+            in the <span class="column-name">named</span> column:
+        </p>
+        <ol bind="services"></ol>
+    </fieldset>
   </div>
   <div class="dialog-footer">
     <button class="button" bind="cancel">Cancel</button>
