Add start button to extraction dialog.

--- a/module/dialogs/extraction.html
+++ b/module/dialogs/extraction.html
@@ -13,6 +13,7 @@
     </fieldset>
   </div>
   <div class="dialog-footer">
-    <button class="button" bind="cancel">Cancel</button>
+    <button bind="cancel" class="button" >Cancel</button>
+    <button bind="start"  class="button default" disabled>Start extraction</button>
   </div>
 </div>
