--- a/module/dialogs/extraction.html
+++ b/module/dialogs/extraction.html
@@ -4,7 +4,7 @@
   </div>
   <div class="dialog-body">
     <fieldset>
-        <legend>Named-entity extraction services</legend>
+        <legend>Named-entity recognition services</legend>
         <p>
             Use the following services to recognize and extract named entities
             in the <span class="column-name">named</span> column:
