--- a/module/dialogs/about.html
+++ b/module/dialogs/about.html
@@ -8,6 +8,9 @@
       the <a href="http://freeyourmetadata.org/" target="_blank">Free Your Metadata</a> initiative
       by <a href="http://ruben.verborgh.org/" target="_blank">Ruben Verborgh</a>.
     </p>
+    <p>
+      This extension is provided under the MIT license.
+    </p>
   </div>
   <div class="dialog-footer">
     <button class="button" bind="close">Close</button>
