Separate configuration of service and extraction settings.

--- a/module/dialogs/configuration.html
+++ b/module/dialogs/configuration.html
@@ -1,9 +1,8 @@
 <div class="dialog-frame ner ner-configuration">
   <div class="dialog-header">
-    Configuration — Named-Entity Recognition Extension
+    Services — Named-Entity Recognition
   </div>
   <div class="dialog-body">
-    <h2>Services</h2>
     <div bind="services">
     </div>
   </div>
