--- a/module/dialogs/extraction.html
+++ b/module/dialogs/extraction.html
@@ -4,10 +4,8 @@
   </div>
   <div class="dialog-body">
     <fieldset>
-        <legend>Named-entity recognition services</legend>
         <p>
-            Use the following services to recognize and extract named entities
-            in the <span class="column-name">named</span> column:
+          Extract named entity in the <span class="column-name">named</span> column using the following services:
         </p>
         <ol bind="services"></ol>
     </fieldset>
